# cimulator

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
memory-bank/: activeContext.md  progress.md  systemPatterns.md
src/cimulator/: __init__.py  cli.py  job_expander.py  loader.py  simulation_engine.py  validator.py  workflow.py
test/: test_cli.py  test_duplicate_jobs.py  test_global_variables_from_gitlab_ci.py  test_loader.py  test_optional_needs.py  test_reference_in_rules.py  test_reference_tag.py  test_script_items_as_strings.py  test_simulation_engine.py  test_validator.py  test_variable_expansion_in_rules.py
test/test_files/duplicate_jobs/: .gitlab-ci.yml  file1.yml  file2.yml  simulation_config.yml
