[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cimulator"
version = "0.1.0"
description = "A tool to validate and simulate GitLab CI pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ilya Barkov", email = "ilya.barkov@example.com"}
]
keywords = ["gitlab", "ci", "pipeline", "simulation", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "iniconfig>=2.1.0",
    "packaging>=24.2",
    "pluggy>=1.5.0",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0",
]

[project.scripts]
cimulator = "cimulator.cli:main"

[project.urls]
Repository = "https://github.com/ibarkov/cimulator"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

# This ensures poetry knows where to find the package
[tool.poetry]
packages = [{ include = "cimulator", from = "src" }]