[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cimulator"
dynamic = ["version"]
description = "A tool to validate and simulate GitLab CI pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ilia Barkov", email = "barkovian@gmail.com"}
]
keywords = ["gitlab", "ci", "pipeline", "simulation", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "iniconfig>=2.1.0",
    "packaging>=24.2",
    "pluggy>=1.5.0",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0",
]

[project.scripts]
cimulator = "cimulator.cli:main"

[project.urls]
Repository = "https://github.com/Zvord/cimulator"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250402",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/cimulator"]
